# win-agent

./: CMakeLists.txt  README.md  main.cpp
agent/: agent.cpp  agent.hpp
agent/common/: processInfo.hpp
agent/commonHeaders/: processInfo.hpp
agent/configFile/: configFile.cpp  configFile.hpp  configFileListener.cpp  configFileListener.hpp
agent/configFileSyner/: configFile.cpp  configFile.hpp  syncer.cpp  syncer.hpp
agent/detectionMethods/: DetectionMethod.cpp  DetectionMethod.hpp  detectionMethod.cpp  detectionMethod.hpp
agent/detectionMethods/fsRelated/: BasicComparison.cpp  BasicComparison.hpp  basicComparison.cpp  basicComparison.hpp  fsDetectionMethod.cpp  fsDetectionMethod.hpp  walk.cpp
agent/logger/: logger.cpp  logger.hpp
scripts/: HOW_TO.md  generate_fake_sus_process_list.py  output.csv
